--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -47,20 +47,20 @@
           <div class="form-group row">
             <label for="shipperBegin" class="col-sm-2 col-form-label">Beginning Address</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="shipperBegin" placeholder="Shipper Beginning Address">
+              <input type="text" class="form-control" id="shipperBegin" placeholder="123 Main Street, Dallas, TX">
             </div>
           </div>
 
           <div class="form-group row mt-1">
             <label for="shipperEnd" class="col-sm-2 col-form-label">Ending Address</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="shipperEnd" placeholder="Shipper Ending Address">
+              <input type="text" class="form-control" id="shipperEnd" placeholder="123 Main Street, Dallas, TXs">
             </div>
           </div>
           <div class="form-group row mt-1">
-            <label for="shipperPrice" class="col-sm-2 col-form-label">Compensation</label>
+            <label for="shipperPrice" class="col-sm-2 col-form-label">Compensation per Mile</label>
             <div class="col-sm-10">
-              <input type="number" class="form-control" id="shipperPrice" placeholder="$350">
+              <input type="number" class="form-control" id="shipperPrice" placeholder="$0.39">
             </div>
           </div>
 
@@ -69,33 +69,58 @@
             <div class="row">
               <legend class="col-form-label col-sm-2 pt-0">Load Type</legend>
               <div class="col-sm-10">
+
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
                   <label class="form-check-label" for="gridRadios1">
-                    Cars
+                    Car
                   </label>
                 </div>
+
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
                   <label class="form-check-label" for="gridRadios2">
-                    Livestock
+                    Truck
                   </label>
                 </div>
+
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
                   <label class="form-check-label" for="gridRadios3">
-                    Food
+                    Motorcycle/ATV
                   </label>
                 </div>
+
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios4" value="option4">
                   <label class="form-check-label" for="gridRadios4">
-                    Household Goods
+                    Boat
+                  </label>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5" value="option5">
+                  <label class="form-check-label" for="gridRadios5">
+                    Camper
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5" value="option5">
+                  <label class="form-check-label" for="gridRadios5">
+                    Other
                   </label>
                 </div>
               </div>
             </div>
           </fieldset>
+
+          <div class="form-group row mt-1">
+            <label for="shipperDetail" class="col-sm-2 col-form-label">Details</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="shipperDetail"
+                placeholder="Details about Load - special instructions">
+            </div>
+          </div>
 
           <div class="form-group row">
             <div class="col">
@@ -103,60 +128,118 @@
             </div>
           </div>
         </form>
+
+        <div class="card">
+          <div class="card-header">Map Goes Here</div>
+        </div>
+
       </div>
+
+      {{!-- Carrier Info --}}
 
       <div role="tabpanel" class="tab-pane" id="carrier">
         <div class="card-header text-center mt-2">Carrier</div>
-        <div class="form-group">
-          <label for="">carrier</label>
-          <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
-          <small class="form-text text-muted">Enter your address</small> </div>
-      </div>
+
+        <form>
+          <div class="form-group row">
+            <label for="carrierBegin" class="col-sm-2 col-form-label">Beginning Address</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="carrierBegin" placeholder="123 Main Street, Dallas, TX">
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="carrierBeginDistance" class="col-sm-2 col-form-label">Maximum Distance</label>
+            <div class="col-sm-10">
+              <input type="number" class="form-control" id="carrierBeginDistance" placeholder="100">
+            </div>
+          </div>
+
+          <div class="form-group row mt-1">
+            <label for="carrierEnd" class="col-sm-2 col-form-label">Ending Address</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="carrierEnd" placeholder="123 Main Street, Dallas, TX">
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="carrierEndDistance" class="col-sm-2 col-form-label">Maximum Distance</label>
+            <div class="col-sm-10">
+              <input type="number" class="form-control" id="carrierEndDistance" placeholder="100">
+            </div>
+          </div>
 
 
-      <div role="tabpanel" class="tab-pane" id="broker">
-        <div class="card-header text-center mt-2">Broker</div>
-        <div class="form-group">
-          <label for="">broker</label>
-          <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
-          <small class="form-text text-muted">What do you want to move?</small>
+          <div class="form-group row mt-1">
+            <label for="MinCarrierPrice" class="col-sm-2 col-form-label">Minimum Compensation per Mile</label>
+            <div class="col-sm-10">
+              <input type="number" class="form-control" id="MinCarrierPrice" placeholder="$0.20">
+            </div>
+          </div>
+
+          <fieldset class="form-group">
+
+            <div class="row">
+              <legend class="col-form-label col-sm-2 pt-0">Load Type</legend>
+              <div class="col-sm-10">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
+                  <label class="form-check-label" for="gridRadios1">
+                    Car
+                  </label>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                  <label class="form-check-label" for="gridRadios2">
+                    Truck
+                  </label>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                  <label class="form-check-label" for="gridRadios3">
+                    Motorcycle/ATV
+                  </label>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios4" value="option4">
+                  <label class="form-check-label" for="gridRadios4">
+                    Boat
+                  </label>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5" value="option5">
+                  <label class="form-check-label" for="gridRadios5">
+                    Camper
+                  </label>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios6" value="option6">
+                  <label class="form-check-label" for="gridRadios6">
+                    Other
+                  </label>
+                </div>
+
+              </div>
+            </div>
+          </fieldset>
+
+          <div class="form-group row">
+            <div class="col">
+              <button type="submit" id="carrierSubmit" class="btn btn-primary btn-block">Submit</button>
+            </div>
+          </div>
+        </form>
+        <div class="card">
+          <div class="card-header">Map Goes Here</div>
         </div>
       </div>
-    </div>
-  </div>
-  {{!-- <div id="home">
-    <div class="container">
-      <div class="row">
-        <div class="col-8 offset-2">
-          <h1>{{msg}}</h1>
-          <h2 class="text-center"><i class="fas fa-truck-loading"></i> <i class="fas fa-truck-moving"></i>&nbsp;Hot Load
-            !</h2>
-          <form class="clearfix mb-4" action="POST">
-            <div class="form-group">
-              <label for="example-text">Example Text</label>
-              <input type="text" id="example-text" class="form-control" aria-describedby="example-text"
-                placeholder="Enter Example Text">
-            </div>
-            <div class="form-group">
-              <label for="example-description">Example Description</label>
-              <textarea class="form-control" id="example-description" aria-describedby="example-description"
-                placeholder="Enter Example Description"></textarea>
-            </div>
-            <button id="submit" class="btn btn-primary float-right">Submit</button>
-          </form>
-          <h3>Examples:</h3>
-          <ul id="example-list" class="list-group">
-            {{#each examples}}
-            <li data-id="{{this.id}}" class="list-group-item">
-              <a href="example/{{this.id}}">{{this.text}}</a>
-              <button class="btn btn-danger float-right delete">ｘ</button>
-            </li>
-            {{/each}}
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div> --}}
+
 </body>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -172,8 +255,39 @@
     $(this).tab('show')
   })
 
-  $('#broker a').on('click', function (e) {
+
+  $('#shipperSubmit').on('click', function (e) {
     e.preventDefault()
-    $(this).tab('show')
+    console.log($('#shipperBegin').val())
+    console.log($('#shipperEnd').val())
   })
+
+  $('#carrierSubmit').on('click', function (e) {
+    e.preventDefault()
+    var carBegin = $('#carrierBegin').val();
+    console.log($('#carrierBeginDistance').val())
+    console.log($('#carrierEnd').val())
+    console.log($('#carrierEndDistance').val())
+
+    getLatLng(carBegin);
+  })
+
+
+  function getLatLng(userAddress) {
+    axios
+      .get("https://maps.googleapis.com/maps/api/geocode/json", {
+        params: {
+          address: userAddress,
+          key: "AIzaSyA2Z73bHqtsEJuas82kslWAoAegg5Rxrco"
+        }
+      })
+      .then(function (response) {
+        var formattedAddress = response.data.results[0].formatted_address;
+        var newUserLat = response.data.results[0].geometry.location.lat;
+        var newUserLng = response.data.results[0].geometry.location.lng;
+
+        console.log(formattedAddress, newUserLat, newUserLng)
+      })
+
+  }
 </script>
