--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,10 +31,11 @@
   </div>
 
   <div class="container">
-    <div class="jumbotron text-center" style="background-image: url('/img/truck.jpg'); background-size: cover">
-      <h2 class="text-center"><i class="fas fa-truck-loading"></i> <i class="fas fa-truck-moving"></i>&nbsp;Hot Load
+    <div class="jumbotron text-center pt-5" style="background-image: url('/img/truck.jpg'); background-size: cover">
+      <h2 class="text-center">
       </h2>
-      <h1 class="display-3">Jumbo heading</h1>
+      <h1 class="display-3" style="color: white"> <i class="fas fa-truck-loading"></i> <i
+          class="fas fa-truck-moving"></i>&nbsp;Hot Load</h1>
       <p class="lead">Jumbo helper text</p>
       <hr class="my-2">
       <p>More info</p>
