table created in MYSQL with Sequelize

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,43 +49,44 @@
               <div class="col-sm-10">
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="car" checked>
                   <label class="form-check-label" for="gridRadios1">
-                    Car
+                    car
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="truck">
                   <label class="form-check-label" for="gridRadios2">
-                    Truck
+                    truck
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3"
+                    value=" motorcycle/ATV">
                   <label class="form-check-label" for="gridRadios3">
-                    Motorcycle/ATV
+                    motorcycle/ATV
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios4" value="option4">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios4" value="boat">
                   <label class="form-check-label" for="gridRadios4">
-                    Boat
+                    boat
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5" value="option5">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5" value="camper">
                   <label class="form-check-label" for="gridRadios5">
-                    Camper
+                    camper
                   </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5" value="option5">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5" value="other">
                   <label class="form-check-label" for="gridRadios5">
-                    Other
+                    other
                   </label>
                 </div>
               </div>
