--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,9 +28,8 @@
       <nav class="navbar navbar-light bg-light">
         <nav class="ml-auto">
           <form class="form-inline ">
-            <button class="btn btn-success mr-2" type="button">Login</button>
-            <br>
-            <button class="btn btn-primary" type="button">Register</button>
+            <a id="btn-login" href="/login" class="btn btn-success mr-2">Login </a>
+            <a id="btn-fblogin" href="/register" class="btn btn-primary">Register</a>
           </form>
         </nav>
       </nav>
