added new login registration 404

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,13 +23,21 @@
 </head>
 
 <body>
+
+
   <div class="container">
     <header>
-      <nav class="navbar navbar-light bg-light">
+      <nav class="navbar navbar-light  ml-2">
+        <a class="navbar-brand" href="/">
+          <img src="https://cdn1.iconfinder.com/data/icons/transport-vol-2/48/053-512.png" width="50" height="50"
+            class="d-inline-block align-top">
+
+        </a>
+
         <nav class="ml-auto">
           <form class="form-inline ">
-            <a id="btn-login" href="/login" class="btn btn-success mr-2">Login </a>
-            <a id="btn-fblogin" href="/register" class="btn btn-primary">Register</a>
+            <a id="btn-login" href="/login" class="btn btn-sm btn-success mr-2">Login </a>
+            <a id="btn-fblogin" href="/register" class="btn btn-sm btn-primary">Register</a>
           </form>
         </nav>
       </nav>
@@ -40,14 +48,7 @@
     <div class="jumbotron text-center pt-5" style="background-image: url('/img/truck.jpg'); background-size: cover">
       <h2 class="text-center">
       </h2>
-      <h1 class="display-3" style="color: white"> <i class="fas fa-truck-loading"></i> <i
-          class="fas fa-truck-moving"></i>&nbsp;Hot Load</h1>
-      <p class="lead">Jumbo helper text</p>
-      <hr class="my-2">
-      <p>More info</p>
-      {{!-- <video audioplay loop muted poster="/img/thumbnail.jpg"> --}}
-      <source src="/img/video.mov" type="video/mov">
-      </video>
+      <h1 class="display-3" style="color: white; font-weight: 700">Hot Load</h1>
     </div>
   </div>
 
