--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,12 @@
 <div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
+  <div class="jumbotron mt-1 text-center">
+    <img src="https://www.askideas.com/media/14/Funny-Truck-Driving-Path.jpg">
+    <h2 class="display-2 text-center"> 404
+    </h2>
+    <h5 class="display-5 text-center">Looks like you went down the wrong road</h5>
+    <div class="text-center">
+      <br>
+      <a href="/"> Take Me Home</a>
+    </div>
   </div>
 </div>
