--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,8 +20,9 @@
 
       <div role="tabpanel" class="tab-pane active" id="shipper">
 
-        <div class="card-header text-center mt-2">Shipper</div>
+        <div class="card-header text-center mt-2">Add Shipment</div>
         <form>
+
           <div class="form-group row">
             <label for="shipperBegin" class="col-sm-2 col-form-label">Beginning Address</label>
             <div class="col-sm-10">
@@ -35,6 +36,7 @@
               <input type="text" class="form-control" id="shipperEnd" placeholder="123 Main Street, Dallas, TX">
             </div>
           </div>
+
           <div class="form-group row mt-1">
             <label for="shipperPrice" class="col-sm-2 col-form-label">Compensation per Mile</label>
             <div class="col-sm-10">
@@ -43,7 +45,6 @@
           </div>
 
           <fieldset class="form-group">
-
             <div class="row">
               <legend class="col-form-label col-sm-2 pt-0">Load Type</legend>
               <div class="col-sm-10">
@@ -110,6 +111,13 @@
 
         <div class="card text-center">
           <div class="card-header">Shipment information goes here or in a modal</div>
+          <ul>
+            {{#each shipments}}
+            {{#if available}}
+            {{shipments}}
+            {{/if}}
+            {{/each}}
+          </ul>
         </div>
 
       </div>
@@ -220,7 +228,7 @@
         </form>
 
         <div class="card">
-          <div class="card-header">Map Goes Here</div>
+          <div class="card-header">Available Routes Go here</div>
         </div>
       </div>
 
