--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -175,42 +175,42 @@
               <div class="col-sm-10">
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+                  <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="car" checked>
                   <label class="form-check-label" for="Radios1">
                     Car
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios2" value="option2">
+                  <input class="form-check-input" type="radio" name="Radios" id="Radios2" value="truck">
                   <label class="form-check-label" for="Radios2">
                     Truck
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios3" value="option3">
+                  <input class="form-check-input" type="radio" name="Radios" id="Radios3" value="motorcycle/ATV">
                   <label class="form-check-label" for="Radios3">
                     Motorcycle/ATV
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios4" value="option4">
+                  <input class="form-check-input" type="radio" name="Radios" id="Radios4" value="boat">
                   <label class="form-check-label" for="Radios4">
                     Boat
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios5" value="option5">
+                  <input class="form-check-input" type="radio" name="Radios" id="Radios5" value="camper">
                   <label class="form-check-label" for="Radios5">
                     Camper
                   </label>
                 </div>
 
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios6" value="option6">
+                  <input class="form-check-input" type="radio" name="Radios" id="Radios6" value="author">
                   <label class="form-check-label" for="Radios6">
                     Other
                   </label>
