--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,21 +2,25 @@
   <article class="card-body mx-auto" style="width: 50%">
     <h4 class="card-title mt-3 text-center">Create Account</h4>
     <p class="text-center">Login</p>
-    <p>
-      <a href="" class="btn btn-success btn-block btn-twitter"> <i class="fab fa-twitter"></i>   Login via Twitter</a>
-      <a href="" class="btn btn-primary btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Login via
-        facebook</a>
+    <p class="text-center">
+      <a href="" class="btn btn-secondary btn btn-github mt-2"> <i class="fab fa-github" aria-hidden="true"></i>
+        &nbsp; Login via Github</a>
+      <a href="" class="btn btn-primary btn btn-linkedin mt-2"> <i class="fab fa-linkedin-in"></i>   Login via
+        LinkedIn</a>
+      <a href="" class="btn btn-danger btn btn-linkedin mt-2"> <i class="fab fa-google"></i>   Login via Google
+      </a>
     </p>
     <p class="divider-text text-center">
       <span>OR</span>
     </p>
-    <div class="login-form-1">
+    <div class="login-form">
+      {{!-- <form action="/authenticate" method="post"> --}}
       <form>
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Your Email *" />
+          <input type="text" class="form-control email" placeholder="Your Email *" />
         </div>
         <div class=" form-group">
-          <input type="password" class="form-control" placeholder="Your Password" />
+          <input type="password" class="form-control password" placeholder="Your Password" name="password" />
         </div>
 
         <div class="form-group">
@@ -30,4 +34,4 @@
     </div>
 
   </article>
-</div> <!-- card.// -->
+</div>
