various searches working, view all on screen

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="jumbotron mt-1 text-center">
-    <img src="https://www.askideas.com/media/14/Funny-Truck-Driving-Path.jpg">
+    <img src="img/404-truck-funny.jpg">
     <h2 class="display-2 text-center"> 404
     </h2>
     <h5 class="display-5 text-center">Looks like you went down the wrong road</h5>
     <div class="text-center">
       <br>
-      <a href="/"> Take Me Home</a>
+      <a class="btn btn-lg btn-danger" href="/" role="button">Take Me Home</a>
     </div>
   </div>
 </div>
