--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -111,122 +111,122 @@
       {{!-- Carrier Info --}}
 
       <div role="tabpanel" class="tab-pane" id="carrier">
-        <div class="card-header text-center mt-2">Carrier</div>
+        <div class="card-header text-center mt-2">Search for Loads</div>
         <form>
-          <div class="form-group row">
-            <label for="carrierBegin" class="col-sm-2 col-form-label">Beginning Address</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="carrierBegin" placeholder="123 Main Street, Dallas, TX">
-            </div>
-          </div>
+          <div class="view-options mb-2 mt-3">
+            <button type="button" id="viewShipments" class="btn btn-success btn-block">View All Loads</button>
 
-          <div class="form-group row">
-            <label for="carrierBeginDistance" class="col-sm-2 col-form-label">Minimum Distance</label>
-            <div class="col-sm-10">
-              <input type="number" class="form-control" id="carrierBeginDistance" placeholder="100">
-            </div>
-          </div>
+            <hr>
+            <h5 class="text-center">OR</h5>
+            <hr>
 
-          <fieldset class="form-group">
-            <div class="row">
-              <legend class="col-form-label col-sm-2 pt-0">Load Type</legend>
+            <div class="form-group row">
+              <label for="carrierBegin" class="col-sm-2 col-form-label">Beginning Address</label>
               <div class="col-sm-10">
-
-                <div class="form-check form-check-inline ml-5">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="car">
-                  <label class="form-check-label" for="Radios1">
-                    Car
-                  </label>
-                </div>
-
-                <div class="form-check form-check-inline ml-5">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios2" value="truck">
-                  <label class="form-check-label" for="Radios2">
-                    Truck
-                  </label>
-                </div>
-
-                <div class="form-check form-check-inline ml-5">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios3" value="motorcycle">
-                  <label class="form-check-label" for="Radios3">
-                    Motorcycle
-                  </label>
-                </div>
-
-                <div class="form-check form-check-inline ml-5">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios4" value="boat">
-                  <label class="form-check-label" for="Radios4">
-                    Boat
-                    </h>
-                </div>
-
-                <div class="form-check form-check-inline ml-5">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios5" value="camper">
-                  <label class="form-check-label" for="Radios5">
-                    Camper
-                    </h>
-                </div>
-
-                <div class="form-check form-check-inline ml-5">
-                  <input class="form-check-input" type="radio" name="Radios" id="Radios6" value="other">
-                  <h class="form-check-label" for="Radios6">
-                    Other
-                  </h>
-                </div>
-
+                <input type="text" class="form-control" id="carrierBegin" placeholder="123 Main Street, Dallas, TX">
               </div>
             </div>
-          </fieldset>
 
-          {{!--   for future development --}}
-          {{!-- <div class="form-group row mt-1">
+            <div class="form-group row">
+              <label for="carrierBeginDistance" class="col-sm-2 col-form-label">Minimum Distance</label>
+              <div class="col-sm-10">
+                <input type="number" class="form-control" id="carrierBeginDistance" placeholder="100">
+              </div>
+            </div>
+
+            <fieldset class="form-group">
+              <div class="row">
+                <legend class="col-form-label col-sm-2 pt-0">Load Type</legend>
+                <div class="col-sm-10">
+
+                  <div class="form-check form-check-inline ml-5">
+                    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="car">
+                    <label class="form-check-label" for="Radios1">
+                      Car
+                    </label>
+                  </div>
+
+                  <div class="form-check form-check-inline ml-5">
+                    <input class="form-check-input" type="radio" name="Radios" id="Radios2" value="truck">
+                    <label class="form-check-label" for="Radios2">
+                      Truck
+                    </label>
+                  </div>
+
+                  <div class="form-check form-check-inline ml-5">
+                    <input class="form-check-input" type="radio" name="Radios" id="Radios3" value="motorcycle">
+                    <label class="form-check-label" for="Radios3">
+                      Motorcycle
+                    </label>
+                  </div>
+
+                  <div class="form-check form-check-inline ml-5">
+                    <input class="form-check-input" type="radio" name="Radios" id="Radios4" value="boat">
+                    <label class="form-check-label" for="Radios4">
+                      Boat
+                      </h>
+                  </div>
+
+                  <div class="form-check form-check-inline ml-5">
+                    <input class="form-check-input" type="radio" name="Radios" id="Radios5" value="camper">
+                    <label class="form-check-label" for="Radios5">
+                      Camper
+                      </h>
+                  </div>
+
+                  <div class="form-check form-check-inline ml-5">
+                    <input class="form-check-input" type="radio" name="Radios" id="Radios6" value="other">
+                    <h class="form-check-label" for="Radios6">
+                      Other
+                    </h>
+                  </div>
+
+                </div>
+              </div>
+            </fieldset>
+
+            {{!--   for future development --}}
+            {{!-- <div class="form-group row mt-1">
             <label for="MinCarrierPrice" class="col-sm-2 col-form-label">Minimum Compensation per Mile</label>
             <div class="col-sm-10">
               <input type="number" class="form-control" id="MinCarrierPrice" placeholder="$0.20">
             </div>
           </div> --}}
 
-          <div class="form-group row">
-            <div class="col">
-              <button type="submit" id="carrierSubmit" class="btn btn-primary btn-block">Submit</button>
+            <div class="form-group row">
+              <div class="col">
+                <button type="submit" id="carrierSubmit" class="btn btn-primary btn-block">Submit</button>
+              </div>
             </div>
-          </div>
         </form>
         <hr>
+        <div class="card">
+          <div class="card-header text-center">
+            <h4>
+              Available Routes
+            </h4>
+          </div>
 
-        <h5 class="text-center">OR</h5>
-        <hr>
-        <div class="view-options mb-2 mt-3">
-          <button type="button" id="viewShipments" class="btn btn-success btn-block">View All Loads</button>
-          <hr>
+          {{!-- ? can't figure this out --}}
 
-          <div class="card">
-            <div class="card-header text-center">
-              <h4>
-                Available Routes
-              </h4>
-            </div>
+          <div id="results">
+            {{#each shipments}}
+            <ul>
+              <li>
+                {{#if available}}
+                {{!-- {{ shipment}} --}}
+                {{!-- <div id="5"> </div> --}}
+                {{this.begin}}
+                {{/if}}
+                {{/each}}
 
-            {{!-- ? can't figure this out --}}
-
-            <div id="results">
-              {{#each shipments}}
-              <ul>
-                <li>
-                  {{#if available}}
-                  {{!-- {{ shipment}} --}}
-                  {{!-- <div id="5"> </div> --}}
-                  {{this.begin}}
-                  {{/if}}
-                  {{/each}}
-
-                </li>
-              </ul>
-            </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
+  </div>
   </div>
   <script>
     $('#shipper a').on('click', function (e) {
