--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,8 +18,9 @@
   <div class="container">
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane active" id="shipper">
-        <div class="card-header text-center mt-2">Add Shipment</div>
-
+        <div class="card-header text-center mt-2">
+          <h4> Add Shipment</h4>
+        </div>
 
         <form>
           <div class="form-group row">
@@ -111,7 +112,9 @@
       {{!-- Carrier Info --}}
 
       <div role="tabpanel" class="tab-pane" id="carrier">
-        <div class="card-header text-center mt-2">Search for Loads</div>
+        <div class="card-header text-center mt-2">
+          <h4>Search for Loads</h4>
+        </div>
         <form>
           <div class="view-options mb-2 mt-3">
             <button type="button" id="viewShipments" class="btn btn-success btn-block">View All Loads</button>
