--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,3 +11,18 @@
   border-radius: 2%;
   text-align: center;
 }
+
+.section {
+  height: 90vh;
+}
+
+/* sticky footer */
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
