--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,9 +59,9 @@
     </div>
   </div>
 
-
-  {{{body}}}
-
+  <section>
+    {{{body}}}
+  </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
     </script>
@@ -70,6 +70,12 @@
     </script>
   <script src="/js/index.js"></script>
 
+
+  <footer class="mt-auto py-3">
+    <div class="container">
+      <a href="https://github.com/dallasappraiser/Hot-Load">Find it on GitHub <i class="fab fa-github"></i></a>
+    </div>
+  </footer>
 </body>
 
 </html>
